radware-ops/idanso/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        svc_lb: canary-lb
        app: app-v1
    spec:
      containers:
      - image: supergiantkir/animals:bear
        name: bear
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-v2
  template:
    metadata:
      labels:
        svc_lb: canary-lb
        app: app-v2
    spec:
      containers:
      - image: supergiantkir/animals:moose
        name: moose
        ports:
        - containerPort: 80
          protocol: TCP
