radware-ops/idanso/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-v1-service
spec:
  selector:
    app: app-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-v2-service
spec:
  selector:
    app: app-v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
